# Living-Resonance-Codex

./: .env-instructions.md  .gitignore  AI_AGENT_INTERACTIONS_GUIDE.md  CLEANUP_CANDIDATES.md  CLEANUP_COMPLETED_SUMMARY.md  CLEAN_INSTALL_README.md  CLI_INTERFACE_DOCUMENTATION.md  COMPREHENSIVE_FEATURE_INVENTORY.md  CONSOLIDATION_SUMMARY.md  DOCKERFILE_CLEANUP_SUMMARY.md  DOCKER_DEPLOYMENT_VALIDATION.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  INSTALL_WINDOWS.md  LIVING_CODEX_USER_GUIDE.md  METADATA_ENHANCEMENT_ANALYSIS_AND_PLAN.md  MIGRATION_PLAN.md  ORGANIZATION_COMPLETE.md  ORGANIZED_STRUCTURE_README.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  PHASE_5_FINAL_VERIFICATION_REPORT.md  README.md  SECOND_CLEANUP_SUMMARY.md  TRANSFORMATION_COMPLETE_SUMMARY.md  USER_MANAGEMENT_GUIDE.md  cleanup_rust_chocolatey.bat  codex_cli.py  codex_cli_minimal.py  codex_cli_standalone.py  demo_git_ice_storage.py  demo_ice_bootstrap_cycle.py  demo_setup_core_system.py  demo_testing_system.py  demo_user_management.py  demo_water_states.py  install_dependencies.bat  install_dependencies.sh  install_dependencies_clean.bat  launch_cli.py  (+15 more)
_archive/: COMPLETE_META_CIRCULAR_SYSTEM.md  bootstrap_nodes.py  codex_bootstrap.py  fractal_storage.py  run_fractal_demo.py
assets_store/: assets_index.json
contributions/: 08c8699b-4b52-4c6d-a29d-2b7a25736693.json  d777e654-e839-469b-8b05-c399b37e9b48.json
prototypes/federation-rust/: .gitignore  Cargo.toml  README.md  test_rust_fractal.py
prototypes/federation-rust/src/: main.rs  models.rs  storage.rs
(+734 files in other folders)
